# ceREEBerus

./: .gitignore  Makefile  README.md  Untitled.ipynb  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reeb_plot.ipynb  requirements.txt  search.html  searchindex.js
.github/: pull_request_template.md
.github/workflows/: deploy_docs.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  pull_request_template.md  run_tests.yml
Notebooks_Unused/: ilp_different_solvers.ipynb  integer_linear_programming.ipynb  integer_linear_programming_diagram.ipynb  juggling_man.ipynb  linear_optimization_ILP_forms.ipynb  n_search_fail.ipynb  sandbox_decomposition.ipynb  sandbox_fixing_LBMs.ipynb  sandbox_fixing_optimization.ipynb  sandbox_ishika.ipynb  sandbox_liz.ipynb  torus_line.ipynb
_modules/: index.html
_sources/: contributing.rst.txt  index.md.txt
_sources/notebooks/: embed_graph_basics.ipynb.txt
ceREEBerus/: __init__.py  reeb.py
ceREEBerus/data/: graphs.py
cereeberus/: MapperTest.ipynb  __init__.py  compute_mapper.ipynb  mapper_basics.ipynb  merge.py  reeb.py
cereeberus/cereeberus/: __init__.py
cereeberus/compute/: __init__.py  degree.py  draw.py  merge.py
cereeberus/data/: __init__.py  graphs.py  randomMergeTrees.py  shapes.py
cereeberus/reeb/: reeb.py
cereeberus/tests/: test_node_ops.py  (+2 more)
doc_source/: conf.py  contributing.rst  data.rst  data_merge.rst  data_networkx.rst  index.md  index.rst  modules.rst  reeb.rst
docs/: .buildinfo  compute.html  compute_degree.html  compute_distance.html  compute_draw.html  compute_merge.html  compute_uf.html  contributing.html  data.html  data_merge.html  data_networkx.html  data_reeb.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  reeb.html  search.html  searchindex.js
doctrees/: contributing.doctree  environment.pickle  index.doctree
modules/: index.html
notebooks/: compute_Reeb_from_simplex_tree.html  compute_mapper.html  compute_mapper.ipynb  compute_reeb.html  embed_graph_basics.html  example_graphs.html  index.html  interleaving_basics.html  juggling_man.ipynb  mapper_basics.html  mapper_basics.ipynb  merge_basics.html  merge_basics.ipynb  reeb_basics.html  reeb_plot.ipynb  up_down_degree.ipynb
tests/: test_computemapper.py  test_draw_layout.py  test_embed_graph.py  test_interleaving.py  test_labeled_blocks.py  test_lowerstarSC_class.py  test_lowerstar_class.py  test_mapper_class.py  test_merge_tree.py  test_node_ops.py  test_reeb_class.py  test_up_down_degree.py
(+346 files in other folders)
