[build]

[project]
name = "cereeberus"
version = "0.0.14"
authors = [
  { name="Danielle Barnes", email="barnesd8@msu.edu" },
]
description = "Package to do fun things with Reeb graphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
            "networkx",
            "matplotlib",
            ]

[tool.setuptools.packages.find]
where = ["cereeberus"]

[tool.setuptools.package-data]
cereeberus = ["data"]

[project.urls]
repository = "https://github.com/MunchLab/ceREEBerus"
homepage = "https://github.com/MunchLab/ceREEBerus"
documentation = "https://github.com/MunchLab/ceREEBerus"